<resources>
    <string name="app_name">Elmo9af</string>
    <string name="ic_title_home">Home</string>
    <string name="ic_titre_compte">Compte</string>
    <string name="ic_titre_paiment">Paiment</string>
    <string name="elmo9af">Elmo9af</string>
    <string name="deconnecter">deconnecter</string>

    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="ic_title_profile">Profile</string>
    <string name="ic_title_chat">Chat</string>
    <string name="ic_title_payment">Payment</string>
    <string name="ic_title_logout">Logout</string>
    <string name="ic_title_about_us">About Us</string>
    <string name="ic_title_privacy_policy">Privacy Policy</string>
    <string name="logo_of_app">Logo of app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
