<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/ic_title_home"
            android:icon="@drawable/ic_home"
            />
        <item android:id="@+id/nav_profile"
            android:title="@string/ic_title_profile"
            android:icon="@drawable/ic_profile"
            />
        <item android:id="@+id/nav_chat"
            android:title="@string/ic_title_chat"
            android:icon="@drawable/ic_chat"
            />
        <item android:id="@+id/nav_payment"
            android:title="@string/ic_title_payment"
            android:icon="@drawable/ic_payment"
            />
        <item android:id="@+id/nav_logout"
            android:title="@string/ic_title_logout"
            android:icon="@drawable/ic_logout"
            />
    </group>
    <item android:title="Other">
        <menu>
            <item android:id="@+id/nav_about_us"
                android:title="@string/ic_title_about_us"
                />
            <item android:id="@+id/nav_policy"
                android:title="@string/ic_title_privacy_policy"
                />
        </menu>
    </item>
</menu>